test_inputs/bad/builtin_collision.lat
void printInt(int a) {

}

int main() {
    return 0;
}
